<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BottomNavigationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.task.ui.TaskActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/taskBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/background_window"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/small_margin"
        app:behavior_hideable="true"
        app:cardCornerRadius="@dimen/widget_item_corner_radius"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            android:orientation="vertical"
            android:paddingTop="@dimen/normal_margin">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/taskNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/task_name"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/taskNameEditText"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/taskDescriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="1"
                android:hint="@string/task_description">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/taskDescriptionEditText"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxHeight="300dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/selectShowDateButton"
                style="@style/AppTheme.DateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_start_date_button"
                android:text="@string/show_now"
                android:textColor="@color/colorStartRangeText" />

            <Button
                android:id="@+id/selectDeadlineDateButton"
                style="@style/AppTheme.DateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_deadline_date_button"
                android:text="@string/without_deadline"
                android:textColor="@color/colorDeadlineText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/lowPriorityButton"
                    style="@style/AppTheme.PriorityButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/background_low_priority_button"
                    android:stateListAnimator="@animator/animator_priority_button" />


                <ImageButton
                    android:id="@+id/normalPriorityButton"
                    style="@style/AppTheme.PriorityButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/background_normal_priority_button"
                    android:stateListAnimator="@animator/animator_priority_button" />

                <ImageButton
                    android:id="@+id/highPriorityButton"
                    style="@style/AppTheme.PriorityButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/background_high_priority_button"
                    android:stateListAnimator="@animator/animator_priority_button" />

            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                style="@style/AppTheme.SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:background="@drawable/background_normal_priority_button"
                android:stateListAnimator="@animator/animator_submit_button"
                tools:text="@string/add_task" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>